commit to master

--- a/index.html
+++ b/index.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro component with sign up form</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="stylesheet.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Intro component with sign up form</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+        
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
 </head>
+
 <body>
+    <div class="left">
+        <h1>Learn to code by watching others</h1>
+        <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
+    </div>
 
-  Learn to code by watching others
+    <div class="right">
+        <button>Try it free 7 days then $20/mo. thereafter</button>
+        <div class="container">
+            <form action="">
+                <label for="fname"></label>
+                <input type="text" id="fname" name="firstname" placeholder="First Name">
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+                <label for="lname"></label>
+                <input type="text" id="lname" name="lastname" placeholder="Last Name">
 
-  Try it free 7 days then $20/mo. thereafter
+                <label for="email"></label>
+                <input type="text" id="email" name="email" placeholder="Email Address">
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+                <label for="pssw"></label>
+                <input type="text" id="pssw" name="password" placeholder="Password">
 
-  Claim your free trial 
+                <button type="submit">CLAIM YOUR FREE TRIAL</button>
 
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+                <span>By clicking the button, you are agreeing to our Terms and Services</span>
+
+            </form>
+        </div>
+    </div>
+
+    <footer>
+        <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://twitter.com/justbycris" target="_blank">@justbycris</a>.
+        </p>
+    </footer>
 </body>
+
 </html>
