--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
 
     <title>Frontend Mentor | Intro component with sign up form</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-        .attribution {
-            font-size: 11px;
-            text-align: center;
-        }
-        
-        .attribution a {
-            color: hsl(228, 45%, 44%);
-        }
-    </style>
 </head>
 
 <body>
@@ -31,34 +20,32 @@
     </div>
 
     <div class="right">
-        <button>Try it free 7 days then $20/mo. thereafter</button>
+        <button class="btn-top"><b>Try it free 7 days</b> then $20/mo. thereafter</button>
         <div class="container">
             <form action="">
                 <label for="fname"></label>
-                <input type="text" id="fname" name="firstname" placeholder="First Name">
+                <input type="text" id="fname" name="firstname" placeholder="First Name"><br>
 
                 <label for="lname"></label>
-                <input type="text" id="lname" name="lastname" placeholder="Last Name">
+                <input type="text" id="lname" name="lastname" placeholder="Last Name"><br>
 
                 <label for="email"></label>
-                <input type="text" id="email" name="email" placeholder="Email Address">
+                <input type="text" id="email" name="email" placeholder="Email Address"><br>
 
                 <label for="pssw"></label>
-                <input type="text" id="pssw" name="password" placeholder="Password">
+                <input type="text" id="pssw" name="password" placeholder="Password"><br>
 
-                <button type="submit">CLAIM YOUR FREE TRIAL</button>
+                <button type="submit" class="btn-bottom">CLAIM YOUR FREE TRIAL</button>
 
-                <span>By clicking the button, you are agreeing to our Terms and Services</span>
+                <div class="box-small">
+                    <p class="small-letters">By clicking the button, you are agreeing to our <span style="font-weight: bold; color: hsl(0, 100%, 74%) ;">Terms and Services</span></p>
+                </div>
 
             </form>
         </div>
     </div>
 
-    <footer>
-        <p class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://twitter.com/justbycris" target="_blank">@justbycris</a>.
-        </p>
-    </footer>
+
 </body>
 
 </html>
