--- a/index.html
+++ b/index.html
@@ -14,37 +14,38 @@
 </head>
 
 <body>
-    <div class="left">
-        <h1>Learn to code by watching others</h1>
-        <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
-    </div>
-
-    <div class="right">
-        <button class="btn-top"><b>Try it free 7 days</b> then $20/mo. thereafter</button>
-        <div class="container">
-            <form action="">
-                <label for="fname"></label>
-                <input type="text" id="fname" name="firstname" placeholder="First Name"><br>
-
-                <label for="lname"></label>
-                <input type="text" id="lname" name="lastname" placeholder="Last Name"><br>
-
-                <label for="email"></label>
-                <input type="text" id="email" name="email" placeholder="Email Address"><br>
-
-                <label for="pssw"></label>
-                <input type="text" id="pssw" name="password" placeholder="Password"><br>
-
-                <button type="submit" class="btn-bottom">CLAIM YOUR FREE TRIAL</button>
-
-                <div class="box-small">
-                    <p class="small-letters">By clicking the button, you are agreeing to our <span style="font-weight: bold; color: hsl(0, 100%, 74%) ;">Terms and Services</span></p>
-                </div>
-
-            </form>
+    <main>
+        <div class="left">
+            <h1>Learn to code by watching others</h1>
+            <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
         </div>
-    </div>
 
+        <div class="right">
+            <button class="btn-top"><b>Try it free 7 days</b> then $20/mo. thereafter</button>
+            <div class="container">
+                <form action="">
+                    <label for="fname"></label>
+                    <input type="text" id="fname" name="firstname" placeholder="First Name"><br>
+
+                    <label for="lname"></label>
+                    <input type="text" id="lname" name="lastname" placeholder="Last Name"><br>
+
+                    <label for="email"></label>
+                    <input type="text" id="email" name="email" placeholder="Email Address"><br>
+
+                    <label for="pssw"></label>
+                    <input type="text" id="pssw" name="password" placeholder="Password"><br>
+
+                    <button type="submit" class="btn-bottom">CLAIM YOUR FREE TRIAL</button>
+
+                    <div class="box-small">
+                        <p class="small-letters">By clicking the button, you are agreeing to our <span style="font-weight: bold; color: hsl(0, 100%, 74%) ;">Terms and Services</span></p>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </main>
 
 </body>
 
