--- a/index.html
+++ b/index.html
@@ -22,32 +22,44 @@
 
         <div class="right">
             <button class="btn-top"><b>Try it free 7 days</b> then $20/mo. thereafter</button>
-            <div class="container">
-                <form action="" id="form">
-                    <label for="fname"></label>
-                    <input type="text" id="fname" name="firstname" placeholder="First Name">
-                    <small>First Name cannot be empty</small><br>
 
-                    <label for="lname"></label>
-                    <input type="text" id="lname" name="lastname" placeholder="Last Name">
-                    <small>Last Name cannot be empty</small><br>
+            <form action="" id="form">
+                <div class="form-mng">
 
-                    <label for="email"></label>
-                    <input type="text" id="email" name="email" placeholder="Email Address">
-                    <small>Looks like this is not an email</small><br>
+                    <input type="text" id="fname" placeholder="First Name">
+                    <img src="images/icon-error.svg" alt="error icon">
+                    <small></small><br>
+                </div>
 
-                    <label for="pssw"></label>
-                    <input type="text" id="pssw" name="password" placeholder="Password">
-                    <small>Password cannot be empty</small><br>
+                <div class="form-mng">
 
-                    <button type="submit" class="btn-bottom">CLAIM YOUR FREE TRIAL</button>
+                    <input type="text" id="lname" placeholder="Last Name">
+                    <img src="images/icon-error.svg" alt="error icon">
+                    <small></small><br>
+                </div>
 
-                    <div class="box-small">
-                        <p class="small-letters">By clicking the button, you are agreeing to our <span style="font-weight: bold; color: hsl(0, 100%, 74%) ;">Terms and Services</span></p>
-                    </div>
+                <div class="form-mng">
 
-                </form>
-            </div>
+                    <input type="text" id="email" placeholder="Email Address">
+                    <img src="images/icon-error.svg" alt="error icon">
+                    <small></small><br>
+                </div>
+
+                <div class="form-mng">
+
+                    <input type="password" id="pssw" placeholder="Password">
+                    <img src="images/icon-error.svg" alt="error icon">
+                    <small></small><br>
+                </div>
+
+                <button type="submit" class="btn-bottom" id="submit">CLAIM YOUR FREE TRIAL</button>
+
+                <div class="box-small">
+                    <p class="small-letters">By clicking the button, you are agreeing to our <a href="#" style="font-weight: 600; color: hsl(0, 100%, 74%); text-decoration: none;">Terms and Services </a></p>
+                </div>
+
+            </form>
+
         </div>
     </main>
 
